<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/azul4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Select"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintBottom_toBottomOf="@id/main"
        android:orientation="vertical"
        android:layout_marginVertical="2dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCircle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Circle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Rectangle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Triangle"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>