<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleActivity"
    android:background="@color/azul4">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/back"
        android:backgroundTint="@color/azul3"

        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/radius_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/radius_hint"
        android:textColorHint="@color/azul3"
        android:inputType="number"
        android:textColor="@color/azul3"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        android:backgroundTint="@color/azul3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/result_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius_input" />

    <androidx.cardview.widget.CardView
        android:id="@+id/result_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/azul2"

                android:textSize="20sp"
                tools:text="Area: 0.0" />

            <ImageView
                android:id="@+id/radius_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/radius"
                android:contentDescription="@string/radius_image" />




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>